--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
   <button id="install">Install</button>
 <body>
-<script>
+  <script>
   var button = document.getElementById('install');
   button.onclick = function() {
     var mozApps = window.navigator.mozApps;
@@ -26,5 +26,6 @@
       };
     }
   };
+  </script>
 </body>
 </html>
